Bug 102358 - FILESAVE: Writer doesn't save inserted 3D object from Draw.
Summary: FILESAVE: Writer doesn't save inserted 3D object from Draw.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.3.7.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-09-22 11:30 UTC by Kamil Landa
Modified: 2016-10-06 14:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kamil Landa 2016-09-22 11:30:45 UTC
In Draw, draw rectangle and click on it by right mouse button and select „Convert – To 3D“. Copy it and paste into new document in Writer. Save document in Writer, close it and open it. And 3D object is not there.
Comment 1 MM 2016-09-22 18:26:25 UTC
Unconfirmed with v4.2.8.2 under mint 17.3 x64.
Confirmed with v4.3.7.2 under mint 17.3 x64.
Confirmed with v5.2.1.2 under ubuntu 16.04 x64.
Comment 2 Xisco Faulí 2016-09-23 11:29:14 UTC
Regression introduced by

commit 2f50ce6cfab2871cd879c1429e1938d3642616ef
Author:     Marcos Paulo de Souza <marcos.souza.org@gmail.com>
AuthorDate: Thu Dec 5 19:17:18 2013 -0200
Commit:     Stephan Bergmann <sbergman@redhat.com>
CommitDate: Mon Dec 9 17:25:13 2013 +0100
    
fdo#54938: Convert sw to use cppu::supportsService

@Marcos, could you please take a look whenever you have time?
Comment 3 Marcos Souza 2016-09-28 00:03:20 UTC
(In reply to Xisco Faulí from comment #2)
> Regression introduced by
> 
> commit 2f50ce6cfab2871cd879c1429e1938d3642616ef
> Author:     Marcos Paulo de Souza <marcos.souza.org@gmail.com>
> AuthorDate: Thu Dec 5 19:17:18 2013 -0200
> Commit:     Stephan Bergmann <sbergman@redhat.com>
> CommitDate: Mon Dec 9 17:25:13 2013 +0100
>     
> fdo#54938: Convert sw to use cppu::supportsService
> 
> @Marcos, could you please take a look whenever you have time?

OK, I'll do my best.
Comment 4 Caolán McNamara 2016-09-28 11:32:24 UTC
The problem is that SwXShape::supportsService doesn't return true for com.sun.star.drawing.Shape anymore
Comment 5 Commit Notification 2016-09-28 11:42:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5345b1562066d61b9ed79f072f8a953c67f847ed

Resolves: tdf#102358 writer cannot save 3d shape inserted from draw

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-10-06 14:34:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8da897574f0a9e40b87944750eec813c428e6a30&h=libreoffice-5-2

Resolves: tdf#102358 writer cannot save 3d shape inserted from draw

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.