Resolves: tdf#102358 writer cannot save 3d shape inserted from draw

because SwXShape::supportsService always returned true for
com.sun.star.drawing.Shape I surmise that getSupportedServiceNames
should always list com.sun.star.drawing.Shape as a supported service

This went awry with...

commit 2f50ce6cfab2871cd879c1429e1938d3642616ef
Author: Marcos Paulo de Souza <marcos.souza.org@gmail.com>
Date:   Thu Dec 5 19:17:18 2013 -0200

    fdo#54938: Convert sw to use cppu::supportsService

    Change-Id: Ic27bf31e5eb991ccceb8b97713d1e50a736709c8
    Signed-off-by: Stephan Bergmann <sbergman@redhat.com>

Change-Id: I9821a620da8bac3b6b59da976a8c25bb2deafcf1